--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,32 @@
 version: "3.7"
 
 services:
+  minio:
+    image: minio/minio
+    restart: always
+    command: server /data
+    ports:
+      - "172.17.0.1:12326:9000"
+      - "172.17.0.1:62716:9001"
+    environment:
+      MINIO_ROOT_USER: minio
+      MINIO_ROOT_PASSWORD: ${ADMIN_PASSWORD}
+    volumes:
+      - ./s3_data:/data
+  # This service just makes sure a bucket with the right policies is created
+  createbuckets:
+    image: minio/mc
+    depends_on:
+      - minio
+    entrypoint: >
+      /bin/sh -c "
+      sleep 10;
+      /usr/bin/mc config host add minio http://minio:9000 minio ${ADMIN_PASSWORD};
+      /usr/bin/mc mb minio/opnform;
+      /usr/bin/mc anonymous set public minio/opnform/public;
+      exit 0;
+      "
+
   opnform:
     image: jhumanj/opnform
     restart: always
