--- a/elestio.yml
+++ b/elestio.yml
@@ -15,6 +15,14 @@ ports:
     public: true
     path: "/"
     isAuth: false
+  - protocol: "HTTPS"
+    targetProtocol: "HTTP"
+    listeningPort: "58624"
+    targetPort: "9999"
+    targetIP: "172.17.0.1"
+    public: true
+    path: "/"
+    isAuth: false
 environments:
   - key: "SOFTWARE_VERSION_TAG"
     value: "latest"
@@ -88,6 +96,18 @@ environments:
     value: "OpnForm"
   - key: "JWT_TTL"
     value: "1440"
+  - key: "AWS_ACCESS_KEY_ID"
+    value: "minio"
+  - key: "AWS_SECRET_ACCESS_KEY"
+    value: "random_password"
+  - key: "AWS_URL"
+    value: "https://[CI_CD_DOMAIN]:58624"
+  - key: "AWS_ENDPOINT"
+    value: "https://[CI_CD_DOMAIN]:58624"
+  - key: "AWS_BUCKET"
+    value: "opnform"
+  - key: "AWS_DEFAULT_REGION"
+    value: "us-east-1"
 
 config:
   runTime: "dockerCompose"
