--- a/elestio.yml
+++ b/elestio.yml
@@ -23,15 +23,16 @@ ports:
     public: true
     path: "/"
     isAuth: false
+
 environments:
   - key: "SOFTWARE_VERSION_TAG"
     value: "latest"
   - key: "DOMAIN"
-    value: "[CI_CD_DOMAIN]"
+    value: "[DOMAIN]"
   - key: "SELF_HOSTED"
     value: "false"
   - key: "ADMIN_EMAIL"
-    value: "[EMAIL]"
+    value: "[ADMIN_EMAIL]"
   - key: "ADMIN_PASSWORD"
     value: "random_password"
   - key: "APP_NAME"
@@ -43,23 +44,25 @@ environments:
   - key: "APP_LOG_LEVEL"
     value: "debug"
   - key: "APP_URL"
-    value: "https://[CI_CD_DOMAIN]"
-  - key: NUXT_PUBLIC_APP_URL
+    value: "[CI_CD_DOMAIN]"
+  - key: "NUXT_PUBLIC_APP_URL"
     value: "/"
-  - key: NUXT_PUBLIC_API_BASE
+  - key: "NUXT_PUBLIC_API_BASE"
     value: "/api"
-  - key: NUXT_PRIVATE_API_BASE
+  - key: "NUXT_PRIVATE_API_BASE"
     value: "http://ingress/api"
-  - key: NUXT_PUBLIC_ENV
+  - key: "NUXT_PUBLIC_ENV"
     value: "dev"
   - key: "LOG_CHANNEL"
     value: "errorlog"
+  - key: "BROADCAST_CONNECTION"
+    value: "log"
   - key: "LOG_LEVEL"
     value: "debug"
   - key: "DB_CONNECTION"
     value: "pgsql"
   - key: "DB_HOST"
-    value: "postgres"
+    value: "db"
   - key: "DB_PORT"
     value: "5432"
   - key: "DB_DATABASE"
@@ -69,9 +72,7 @@ environments:
   - key: "DB_PASSWORD"
     value: "random_password"
   - key: "FILESYSTEM_DRIVER"
-    value: "s3"
-  - key: "FILESYSTEM_DISK"
-    value: "s3"
+    value: "local"
   - key: "BROADCAST_DRIVER"
     value: "log"
   - key: "CACHE_DRIVER"
@@ -79,7 +80,7 @@ environments:
   - key: "QUEUE_CONNECTION"
     value: "redis"
   - key: "SESSION_DRIVER"
-    value: "file"
+    value: "redis"
   - key: "SESSION_LIFETIME"
     value: "120"
   - key: "REDIS_HOST"
@@ -91,15 +92,15 @@ environments:
   - key: "MAIL_MAILER"
     value: "smtp"
   - key: "MAIL_HOST"
-    value: "172.17.0.1"
+    value: "tuesday.mxrouting.net"
   - key: "MAIL_PORT"
     value: "25"
   - key: "MAIL_USERNAME"
-    value: "null"
+    value: "[DOMAIN]@vm.elestio.app"
   - key: "MAIL_PASSWORD"
     value: "null"
   - key: "MAIL_ENCRYPTION"
-    value: "null"
+    value: "tls"
   - key: "MAIL_FROM_ADDRESS"
     value: "[DOMAIN]@vm.elestio.app"
   - key: "MAIL_FROM_NAME"
@@ -111,14 +112,39 @@ environments:
   - key: "AWS_SECRET_ACCESS_KEY"
     value: "random_password"
   - key: "AWS_URL"
-    value: "https://[CI_CD_DOMAIN]:58624"
+    value: "[CI_CD_DOMAIN]:58624"
   - key: "AWS_ENDPOINT"
-    value: "https://[CI_CD_DOMAIN]:58624"
+    value: "[CI_CD_DOMAIN]:58624"
   - key: "AWS_BUCKET"
     value: "opnform"
   - key: "AWS_DEFAULT_REGION"
     value: "us-east-1"
-
+  - key: "PUSHER_APP_ID"
+    value: ""
+  - key: "PUSHER_APP_KEY"
+    value: ""
+  - key: "PUSHER_APP_SECRET"
+    value: ""
+  - key: "PUSHER_APP_CLUSTER"
+    value: "mt1"
+  - key: "MIX_PUSHER_APP_KEY"
+    value: ""
+  - key: "MIX_PUSHER_APP_CLUSTER"
+    value: ""
+  - key: "JWT_SECRET"
+    value: ""
+  - key: "MUX_WORKSPACE_ID"
+    value: ""
+  - key: "MUX_API_TOKEN"
+    value: ""
+  - key: "OPEN_AI_API_KEY"
+    value: ""
+  - key: "FRONT_URL"
+    value: "[CI_CD_DOMAIN]"
+  - key: "FRONT_API_SECRET"
+    value: ""
+  - key: "NUXT_API_SECRET"
+    value: ""
 config:
   runTime: "dockerCompose"
   version: ""
@@ -128,6 +154,7 @@ config:
   runCommand: "docker-compose up -d"
   icon: ""
   screenshot: "opnform.jpg"
+
 lifeCycleConfig:
   preInstallCommand: "./scripts/preInstall.sh"
   postInstallCommand: "./scripts/postInstall.sh"
@@ -135,12 +162,13 @@ lifeCycleConfig:
   postBackupCommand: "./scripts/postBackup.sh"
   preRestoreCommand: "./scripts/preRestore.sh"
   postRestoreCommand: "./scripts/postRestore.sh"
+
 webUI:
   - url: "https://[CI_CD_DOMAIN]"
     label: "OpnForm"
     login: "[ADMIN_EMAIL]"
-    password: "[ADMIN_PASSWORD]"
+    password: "random_password"
   - url: "https://[CI_CD_DOMAIN]:20551"
     label: "pgAdmin"
     login: "[ADMIN_EMAIL]"
-    password: "[ADMIN_PASSWORD]"
+    password: "random_password"
