updated config fix

--- a/elestio.yml
+++ b/elestio.yml
@@ -41,7 +41,7 @@ environments:
   - key: "APP_LOG_LEVEL"
     value: "debug"
   - key: "APP_URL"
-    value: "[CI_CD_DOMAIN]"
+    value: "https://[CI_CD_DOMAIN]"
   - key: "NUXT_PUBLIC_APP_URL"
     value: "/"
   - key: "NUXT_PUBLIC_API_BASE"
@@ -109,9 +109,9 @@ environments:
   - key: "AWS_SECRET_ACCESS_KEY"
     value: "random_password"
   - key: "AWS_URL"
-    value: "[CI_CD_DOMAIN]:58624"
+    value: "https://[CI_CD_DOMAIN]:58624"
   - key: "AWS_ENDPOINT"
-    value: "[CI_CD_DOMAIN]:58624"
+    value: "https://[CI_CD_DOMAIN]:58624"
   - key: "AWS_BUCKET"
     value: "opnform"
   - key: "AWS_DEFAULT_REGION"
@@ -137,7 +137,7 @@ environments:
   - key: "OPEN_AI_API_KEY"
     value: ""
   - key: "FRONT_URL"
-    value: "[CI_CD_DOMAIN]"
+    value: "https://[CI_CD_DOMAIN]"
   - key: "FRONT_API_SECRET"
     value: ""
   - key: "NUXT_API_SECRET"
