update elestio fs config

--- a/elestio.yml
+++ b/elestio.yml
@@ -71,7 +71,9 @@ environments:
   - key: "DB_PASSWORD"
     value: "random_password"
   - key: "FILESYSTEM_DRIVER"
-    value: "local"
+    value: "s3"
+  - key: "FILESYSTEM_DISK"
+    value: "s3"
   - key: "BROADCAST_DRIVER"
     value: "log"
   - key: "CACHE_DRIVER"
